--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "vue-cli-service build"
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "express": "^4.16.4",
     "node-sass": "^4.11.0",
     "vue": "^2.6.6",
     "vue-axios": "^2.0.2",
